# ui-control-gesture

./: .gitignore  README.ko.md  README.md  pyproject.toml
src/ui_control_gesture/: __init__.py  __main__.py
src/ui_control_gesture/app/: application.py  config.py  menu.py  types.py
src/ui_control_gesture/audio/: backends.py  coordinator.py  interfaces.py
src/ui_control_gesture/gesture/: __init__.py  hand_mapper.py  head_mapper.py
src/ui_control_gesture/overlay/: __init__.py  renderer.py
src/ui_control_gesture/settings/: __init__.py  store.py
src/ui_control_gesture/system/: __init__.py  macos_input.py  permissions.py
src/ui_control_gesture/vision/: __init__.py  pipeline.py
tasks/: lessons.md  todo.md
tests/unit/: test_audio_backends.py  test_audio_coordinator.py  test_gesture_mapping.py  test_hand_mapper.py  test_head_mapper.py  test_overlay_renderer.py  test_permissions.py  test_settings_store.py
