[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-control-gesture"
version = "0.1.0"
description = "Camera-driven macOS UI control with MediaPipe gestures and modular STT/TTS backends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mediapipe>=0.10.14",
  "mlx-audio",
  "numpy>=1.26",
  "opencv-python>=4.10.0.84",
  "pyobjc-framework-AVFoundation>=11.0",
  "pyobjc-framework-Cocoa>=11.0",
  "pyobjc-framework-Quartz>=11.0",
  "sounddevice>=0.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
ui-control-gesture = "ui_control_gesture.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_control_gesture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
